--- a/scripts/main.css
+++ b/scripts/main.css
@@ -2,12 +2,40 @@
     width:450px;
     height:450px;
     border:1px solid black;
-    margin:10% auto;
+    margin:0 auto;
 }
 .cell {
     width:148px;
     height:148px;
     float:left;
     border:1px solid black;
-
+    line-height: 148px;
+    font-size:50px;
+    vertical-align: middle;
+    text-align: center;
+}
+.cell-o {
+    color:#FF965D;
+}
+.cell-x {
+    color:#3487FF;
+}
+.player {
+    width:100px;
+    font-size:50px;
+    float:left;
+    text-align: center;
+}
+.player.active {
+     background:#FF965D;
+}
+#menu {
+    margin:0 auto;
+    margin: 0 auto;
+    height: 120px;
+    width: 200px;
+}
+#main-container {
+    height:100%;
+    width:100%;
 }
