--- a/scripts/main.css
+++ b/scripts/main.css
@@ -5,10 +5,10 @@
     margin:0 auto;
 }
 .cell {
-    width:148px;
-    height:148px;
+    width:150px;
+    height:150px;
     float:left;
-    border:1px solid black;
+    outline:1px solid black;
     line-height: 148px;
     font-size:50px;
     vertical-align: middle;
